<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocumentActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/fire_bgbg"
        android:scaleType="centerCrop"

        android:layout_marginBottom="8dp"
        android:background="#ff9100"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"


        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"

        app:cardBackgroundColor="#d61451"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/amita"
            android:text="WILDFIRE"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="italic" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"

        android:layout_width="400dp"
        android:layout_height="500dp"
        android:padding="15dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833">



        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/definitionhead"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"

                    android:textColor="#ff383f"
                    android:textAlignment="center"

                    android:fontFamily="@font/amita"
                    android:text="@string/definitionhead"
                    android:textStyle="bold"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/definition1"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="#000"
                    android:fontFamily="serif"
                    android:text="@string/definition"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/causeshead"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:fontFamily="@font/amita"
                    android:text="@string/causehead"
                    android:textColor="#ff383f"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/causes1"
                    android:textColor="#000"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:fontFamily="serif"
                    android:text="@string/causes"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/effectshead"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="#ff383f"
                    android:textAlignment="center"
                    android:layout_gravity="center"

                    android:fontFamily="@font/amita"
                    android:text="@string/effecthead"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/effects1"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="#000"

                    android:fontFamily="serif"
                    android:text="@string/effects"

                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/precautionhead"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="#ff383f"
                    android:textAlignment="center"
                    android:layout_gravity="center"

                    android:fontFamily="serif"
                    android:text="@string/precautionhead"

                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/preacaution1"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="#000"

                    android:fontFamily="serif"
                    android:text="@string/precautions"

                    android:textSize="20sp" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>